--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,4 @@
-﻿absl-py==2.0.0
-attrs==23.1.0
-autopy==4.0.0
-catboost==1.2.2
-cffi==1.16.0
-comtypes==1.2.0
-contourpy==1.1.1
-cvzone==1.6.1
-cycler==0.12.1
-flatbuffers==23.5.26
-fonttools==4.47.0
-graphviz==0.20.1
-importlib-resources==6.1.1
-kiwisolver==1.4.5
-matplotlib==3.7.4
 mediapipe==0.10.9
-MouseInfo==0.1.3
 numpy==1.24.4
-opencv-contrib-python==4.8.1.78
-opencv-python==4.8.1.78
-packaging==23.2
-pandas==2.0.3
-Pillow==10.1.0
-plotly==5.18.0
-protobuf==3.20.3
-psutil==5.9.7
-PyAutoGUI==0.9.54
-pycaw==20230407
-pycparser==2.21
-PyGetWindow==0.0.9
-PyMsgBox==1.0.9
-pyparsing==3.1.1
-pyperclip==1.8.2
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==0.1.30
-python-dateutil==2.8.2
-pytweening==1.0.7
-pytz==2023.3.post1
-pywin32==306
-scipy==1.10.1
-screen-brightness-control==0.22.1
-screeninfo==0.8.1
-six==1.16.0
-sounddevice==0.4.6
-tenacity==8.2.3
-tzdata==2023.4
-WMI==1.5.1
-zipp==3.17.0
+opencv_contrib_python==4.8.1.78
+opencv_python==4.8.1.78
